--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 Fitlife. All Rights Reserved. Created By <a href="https://www.igarsoft.com/" class="copyright-link"> IgarSoft</a>
+          &copy; 2022 Fitlife. All Rights Reserved By <a href="https://www.igarsoft.com/" class="copyright-link"> IgarSoft</a>
         </p>
 
         <ul class="footer-bottom-list">
